fix navbar gap

--- a/_scss/pages/_blog.scss
+++ b/_scss/pages/_blog.scss
@@ -5,6 +5,11 @@
   min-height: 100vh;
 }
 
+/* Main content */
+.main-content {
+  padding-top: 0;
+}
+
 /* Blog Header */
 .blog-header {
   text-align: center;
